force-app/main/default/objects/DRApproverEmail__c/DRApproverEmail__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores email addresses of approvers in discount request workflow</description>
    <label>Discount Request Approver Emails</label>
</CustomObject>