force-app/main/default/objects/DRApproverEmail__c/fields/Approver3_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver3_Email__c</fullName>
    <description>Specifies the email address of approver in second level of discount request workflow</description>
    <label>Approver3 Email</label>
    <type>Email</type>
</CustomField>