force-app/main/default/objects/DRApproverEmail__c/fields/Approver4_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver4_Email__c</fullName>
    <description>Approver4 Email</description>
    <label>Approver4 Email</label>
    <type>Email</type>
</CustomField>