force-app/main/default/objects/DRApproverEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver3_Email__c</columns>
    <columns>Approver4_Email__c</columns>
    <columns>Finance_Group_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>